--- a/padre-ginos/package.json
+++ b/padre-ginos/package.json
@@ -19,9 +19,11 @@
     "prettier": "^3.4.2"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "vite": "^5.4.2"
   }
 }
